--- a/frontend/src/Components/wordset-card/style.module.css
+++ b/frontend/src/Components/wordset-card/style.module.css
@@ -74,6 +74,19 @@
   text-align: left;
 }
 
+.card__description {
+  /* font-family: 'Montserrat', sans-serif; */
+  font-style: normal;
+  /* font-weight: bold; */
+  font-size: 16px;
+  line-height: 24px;
+  color: #000000;
+  margin: 0 0 12px;
+  padding: 0;
+  display: block;
+  text-align: left;
+}
+
 .card__time,
 .card__author {
   display: flex;
